--- a/WebUI/Views/Shared/Footer.cshtml
+++ b/WebUI/Views/Shared/Footer.cshtml
@@ -6,7 +6,7 @@
         <ul>
             <li><a href="#">Умови використання</a></li>
             <li><a href="#">Політика конфіденційності</a></li>
-            <li><a href="">Контакти</a></li>
+            <li><a asp-action="Index" asp-controller="Contacts">Контакти</a></li>
         </ul>
     </div>
 </footer>
