--- a/WebUI/Views/Admin/AddSession.cshtml
+++ b/WebUI/Views/Admin/AddSession.cshtml
@@ -3,7 +3,7 @@
 }
 <!-- Add Movie Drawer -->
 <div id="drawer-create-movie"
-    class="fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800"
+    class="fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 bg-white dark:bg-gray-800"
     tabindex="-1" aria-labelledby="drawer-label" aria-hidden="true">
     <h5 id="drawer-label"
         class="inline-flex items-center mb-6 text-sm font-semibold text-gray-500 uppercase dark:text-gray-400">
@@ -30,9 +30,9 @@
                     placeholder="Введіть дату та час" required="">
             </div>
             <div>
-                <label for="TrailerURL"
+                <label for="Price"
                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ціна</label>
-                <input type="text" name="TrailerURL" id="TrailerURL"
+                <input type="float" name="Price" id="Price"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                     placeholder="Введіть ціну" required="">
             </div>
@@ -42,7 +42,7 @@
                     Створити сеанс
                 </button>
                 <button type="button" id="drawer-create-session-close"
-                    class="inline-flex w-full justify-center text-gray-500 items-center bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-primary-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">
+                    class="inline-flex w-full justify-center text-gray-500 items-center bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-primary-300 rounded-lg border border-gray-200 text-sm font-medium px-3 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">
                     <svg aria-hidden="true" class="w-5 h-5 -ml-1 sm:mr-1" fill="none" stroke="currentColor"
                         viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
