--- a/WebUI/Views/Admin/DeleteMovie.cshtml
+++ b/WebUI/Views/Admin/DeleteMovie.cshtml
@@ -1,28 +1,28 @@
-@using Core.Models.Movie
-@model List<Movie>
+@model Guid
 @{
-    ViewData["Title"] = "Movies";
+ViewData["Title"] = "Movies";
 }
-<!-- Delete Movie Drawer -->
+    <!-- Delete Movie Drawer -->
 <div id="drawer-delete-product"
-    class="fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800"
-    tabindex="-1" aria-labelledby="drawer-label" aria-hidden="true">
+     class="fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800"
+     tabindex="-1" aria-labelledby="drawer-label" aria-hidden="true">
     <h5 id="drawer-label"
-        class="inline-flex items-center text-sm font-semibold text-gray-500 uppercase dark:text-gray-400">Delete
-        item</h5>
+        class="inline-flex items-center text-sm font-semibold text-gray-500 uppercase dark:text-gray-400">Видалити фільм</h5>
     <svg class="w-10 h-10 mt-8 mb-4 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg">
+         xmlns="http://www.w3.org/2000/svg">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
     </svg>
-    <h3 class="mb-6 text-lg text-gray-500 dark:text-gray-400">Are you sure you want to delete this product?</h3>
-    <a href="#"
-        class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm inline-flex items-center px-3 py-2.5 text-center mr-2 dark:focus:ring-red-900">
-        Yes, I'm sure
-    </a>
-    <a href="#" id="drawer-delete-movie-close"
-        class="text-gray-900 bg-white hover:bg-gray-100 focus:ring-4 focus:ring-primary-300 border border-gray-200 font-medium inline-flex items-center rounded-lg text-sm px-3 py-2.5 text-center dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
-        data-drawer-hide="drawer-delete-product">
-        No, cancel
-    </a>
+    <h3 class="mb-6 text-lg text-gray-500 dark:text-gray-400">Ви впевнені, що хочете видалити цей фільм?</h3>
+    <form method="post" asp-action="DeleteMovies">
+        <input type="hidden" name="Id" id="Id" value="@Model" />
+        <button type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm inline-flex items-center px-3 py-2.5 text-center mr-2 dark:focus:ring-red-900">
+            Так, я впевнений
+        </button>
+    </form>
+    <button id="drawer-delete-movie-close"
+            class="mt-4 text-gray-900 bg-white hover:bg-gray-100 focus:ring-4 focus:ring-primary-300 border border-gray-200 font-medium inline-flex items-center rounded-lg text-sm px-3 py-2.5 text-center dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+            data-drawer-hide="drawer-delete-product">
+        Ні, скасувати
+    </button>
 </div>
