--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 
 @{
     <script>
-        if (localStorage.getItem('animated') !== "false")
+        if (localStorage.getItem('animated') !== "true")
         {
             localStorage.setItem('animated', "true")
             window.onload = function() {
