--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -5,10 +5,13 @@
     <title>SoftCinema</title>
     <link rel="shortcut icon" type="image/png" href="~/images/favicon.png"/>
     <link rel="stylesheet" href="~/css/style.css" media="all"/>
+    <link rel="stylesheet" href="~/css/index.css" media="all"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="~/js/menu_login.js"></script>
+    <script src="~/js/schedule-list.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://unpkg.com/tailwindcss@@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
@@ -16,12 +19,13 @@
 <div class="sprite-container">
     <img src="~/images/sprite.png" alt="My sprite" class="sprite">
 </div>
-<div class="site-title">
+<div class="site-title, wrapper">
     <partial name="Header"/>
     @RenderBody()
     <partial name="Footer"/>
 </div>
 <a href="#" class="back-to-top" style="display: none;"></a>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="~/js/script.js"> </script>
 </body>
 </html>
