--- a/WebUI/Views/Admin/UpdateMovie.cshtml
+++ b/WebUI/Views/Admin/UpdateMovie.cshtml
@@ -1,20 +1,18 @@
-@using Core.Models
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model Core.Models.Movie.Movie
 
 @{
     ViewData["Title"] = "Movies";
-    var genres = ViewBag.Genres as List<Genre>;
 }
 
 <main class="my-32 flex flex-column items-center">
     <div class="container">
         <div class="title-box">
-            <div class="title-box__title" style="font-size: 40px;">Додати новий фільм</div>
+            <div class="title-box__title" style="font-size: 40px;">Оновити фільм</div>
         </div>
     </div>
     <div class="max-w-screen-2xl flex items-start w-full flex-column">
-        <form class="w-full flex flex-row mb-20" asp-action="InsertMovie">
+        <form class="w-full flex flex-row mb-20" asp-action="Update">
             <div>
                 <img id="movieImage" src="@(Model.ImageUrl == "" ? "https://www.ncenet.com/wp-content/uploads/2020/04/No-image-found.jpg" : Model.ImageUrl)" alt="" class="w-96"/>
                 <input id="imageUrlInput" asp-for="ImageUrl" class="mt-3 py-3 px-4 border-gray-200 rounded-lg text-sm w-full"/>
@@ -46,6 +44,20 @@
                     <label asp-for="TrailerUrl">Посилання на трейлер</label>
                     <input class="mt-3 py-3 px-4 border-gray-200 rounded-lg text-sm w-full" type="text" asp-for="TrailerUrl"></input>
                 </div>
+                <input asp-for="Id" class="hidden"/>
+                @* Hidden fields to retain genres *@
+                @for (int i = 0; i < Model.Genres.Count; i++)
+                {
+                    <input type="hidden" asp-for="Genres[i].Id"/>
+                    <input type="hidden" asp-for="Genres[i].Name"/>
+                }
+
+                @* Hidden fields to retain actors *@
+                @for (int i = 0; i < Model.Actors.Count; i++)
+                {
+                    <input type="hidden" asp-for="Actors[i].Id"/>
+                    <input type="hidden" asp-for="Actors[i].Name"/>
+                }
                 @* <div class="my-3 w-full flex flex-column"> *@
                 @*     <label asp-for="Genres">Жанри</label> *@
                 @*     <select class="mt-3 py-3 px-4 border-gray-200 rounded-lg text-sm w-full" type="text" asp-for="Genres" asp-items="@ViewBag.genres"></select> *@
@@ -54,7 +66,7 @@
                 @*     <label asp-for="Actors">Актори</label> *@
                 @*     <input class="mt-3 py-3 px-4 border-gray-200 rounded-lg text-sm w-full" type="text" asp-for="Actors"></input> *@
                 @* </div> *@
-                <button class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Додати</button>
+                <button class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Оновити</button>
             </div>
         </form>
     </div>
