--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -19,10 +19,11 @@
 <div class="sprite-container">
     <img src="~/images/sprite.png" alt="My sprite" class="sprite">
 </div>
-<div class="site-title, wrapper">
+<div class="site-title wrapper">
     <partial name="Header"/>
     @RenderBody()
     <partial name="Footer"/>
+    
 </div>
 <a href="#" class="back-to-top" style="display: none;"></a>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
