--- a/WebUI/Views/Login/Index.cshtml
+++ b/WebUI/Views/Login/Index.cshtml
@@ -5,31 +5,45 @@
 }
 
 <main style="overflow: auto" class="main-body">
-    <section id="Login">
-        <div class="form-container">
-            <h2 class="mb-4" style="font-size: 30px">Login</h2>
-            <form class="bootstrap-form" method="post" asp-controller="Login" asp-action="Index" asp-route-returnUrl="@Model.ReturnUrl">
-                <div class="mb-3">
-                    <label class="form-label" asp-for="Email">Email</label>
-                    <input class="form-control" required asp-for="Email">
+    <div class="flex min-h-full flex-col justify-center px-6 py-32 lg:px-8">
+        <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+            <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
+                Sign in to your <img class="inline mx-2 h-10 w-auto" src="~/images/favicon1.png"> account
+            </h2>
+        </div>
+
+        <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+            <form class="space-y-6" method="post" asp-controller="Login" asp-action="Index" asp-route-returnUrl="@Model.ReturnUrl">
+                <div>
+                    <label for="email" class="block text-sm font-medium leading-6 text-gray-900" asp-for="Email">Email address</label>
+                    
+                    <div class="mt-2">
+                        <input id="email" name="email" type="email" autocomplete="email" required asp-for="Email" class="px-3 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    </div>
                     <span asp-validation-for="Email"></span>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label" asp-for="Password">Пароль</label>
-                    <input class="form-control" required asp-for="Password">
+
+                <div>
+                    <div class="flex items-center justify-between">
+                        <label for="password" class="block text-sm font-medium leading-6 text-gray-900" asp-for="Password">Password</label>
+                        <div class="text-sm">
+                            <a class="font-semibold text-bg-black hover:text-orange-500">Forgot password?</a>
+                        </div>
+                    </div>
+                    <div class="mt-2">
+                        <input id="password" name="password" type="password" autocomplete="current-password" required asp-for="Password" class="px-3 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    </div>
                     <span asp-validation-for="Password"></span>
                 </div>
-                <button type="submit" class="btn btn-success">Увійти</button>
-                <p class="mt-3 mb-0">
-                    New user?
-                    <a asp-action="Index"
-                       asp-controller="Register">
-                        Register here
-                    </a>
-                </p>
-            </form>
-            <hr class="my-4">
-        </div>
-    </section>
 
+                <div>
+                    <button type="submit" class="flex w-full justify-center rounded-md bg-black px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Увійти</button>
+                </div>
+            </form>
+            <p class="mt-10 text-center text-sm text-gray-500">
+                Not a member?
+                <a class="font-semibold leading-6 text-bg-black hover:text-orange-500" asp-action="Index" asp-controller="Register">Register here</a>
+            </p>
+        </div>
+    </div>
 </main>
