--- a/WebUI/Views/Register/Index.cshtml
+++ b/WebUI/Views/Register/Index.cshtml
@@ -1,37 +1,54 @@
 ﻿@model Core.Models.User.RegisterViewModel
-
 @{
     ViewData["Title"] = "Register";
 }
-
 <main style="overflow: auto" class="main-body">
-	<section id="Login">
-		<div class="form-container">
-			<h2 class="mb-4" style="font-size: 30px">Register</h2>
-			<form class="bootstrap-form" method="post" asp-controller="Register" asp-action="Index">
+	<div class="flex min-h-full flex-col justify-center px-6 py-32 lg:px-8">
+		<div class="sm:mx-auto sm:w-full sm:max-w-sm">
+			<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
+				Sign in to your <img class="inline mx-2 h-10 w-auto" src="~/images/favicon1.png"> account
+			</h2>
+		</div>
+
+		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+			<form class="space-y-6" method="post" asp-controller="Register" asp-action="Index">
 				<div asp-validation-summary="ModelOnly"></div>
-				<div class="mb-3">
-					<label class="form-label" asp-for="Name">Name</label>
-					<input class="form-control" required asp-for="Name">
+				<div>
+					<label for="email" class="block text-sm font-medium leading-6 text-gray-900" asp-for="Name">Name</label>
+					<div class="mt-2">
+						<input id="name" name="name" type="name" autocomplete="name" required asp-for="Name" class="px-3 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+					</div>
 					<span asp-validation-for="Name"></span>
 				</div>
-				<div class="mb-3">
-					<label class="form-label" asp-for="Email">Email</label>
-					<input class="form-control" required asp-for="Email">
+				<div>
+					<label for="email" class="block text-sm font-medium leading-6 text-gray-900" asp-for="Email">Email address</label>
+					<div class="mt-2">
+						<input id="email" name="email" type="email" autocomplete="email" required asp-for="Email" class="px-3 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+					</div>
 					<span asp-validation-for="Email"></span>
 				</div>
-				<div class="mb-3">
-					<label class="form-label" asp-for="Password">Пароль</label>
-					<input class="form-control" required asp-for="Password">
+				<div>
+					<div class="flex items-center justify-between">
+						<label for="password" class="block text-sm font-medium leading-6 text-gray-900" asp-for="Password">Password</label>
+					</div>
+					<div class="mt-2">
+						<input id="password" name="password" type="password" autocomplete="current-password" required asp-for="Password" class="px-3 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+					</div>
 					<span asp-validation-for="Password"></span>
 				</div>
-				<div class="mb-3">
-					<label class="form-label" asp-for="PasswordConfirm">Підтвердіть пароль</label>
-					<input class="form-control" required asp-for="PasswordConfirm">
+				<div>
+					<div class="flex items-center justify-between">
+						<label class="block text-sm font-medium leading-6 text-gray-900" asp-for="PasswordConfirm">Password Confirm</label>
+					</div>
+					<div class="mt-2">
+						<input required asp-for="PasswordConfirm" class="px-3 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+					</div>
 					<span asp-validation-for="PasswordConfirm"></span>
 				</div>
-				<button type="submit" class="btn btn-success">Зареєструватись</button>
+				<div>
+					<button type="submit" class="flex w-full justify-center rounded-md bg-black px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Зареєструватись</button>
+				</div>
 			</form>
 		</div>
-	</section>
+	</div>
 </main>
